--- a/Assignment2/src/ui/MainJFrame.form
+++ b/Assignment2/src/ui/MainJFrame.form
@@ -205,7 +205,7 @@
                   <Color blue="ff" green="ff" red="99" type="rgb"/>
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Helvetica Neue" size="18" style="1"/>
+                  <Font name="Academy Engraved LET" size="18" style="1"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="SELECT USER TYPE"/>
               </Properties>
