--- a/Assignment2/src/ui/WelcomePageJFrame.form
+++ b/Assignment2/src/ui/WelcomePageJFrame.form
@@ -78,7 +78,7 @@
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Helvetica Neue" size="18" style="1"/>
+              <Font name="Academy Engraved LET" size="18" style="1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="WELCOME TO THE HOSPITAL MANAGEMENT SYSTEM"/>
           </Properties>
@@ -87,6 +87,9 @@
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="0" red="0" type="rgb"/>
+            </Property>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Academy Engraved LET" size="14" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="cc" type="rgb"/>
