--- a/Assignment2/src/ui/ShowAppointmentDoctor.form
+++ b/Assignment2/src/ui/ShowAppointmentDoctor.form
@@ -203,8 +203,14 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnPatientsubmit">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="0" type="rgb"/>
+        </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Academy Engraved LET" size="14" style="1"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Submit"/>
       </Properties>
@@ -213,7 +219,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="371" y="443" width="-1" height="-1"/>
+          <AbsoluteConstraints x="370" y="430" width="140" height="40"/>
         </Constraint>
       </Constraints>
     </Component>
